--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         font-size: 19px;
         color: #fff;
         text-align: center;
-        animation: glow 1s ease-in-out infinite alternate;
+        animation: glow  ease-in-out infinite alternate;
       }
     @-webkit-keyframes glow {
         from {
@@ -39,7 +39,7 @@
         font-size: 39px;
         color: #fff;
         text-align: center;
-        animation: glo  ease-in-out infinite alternate;
+        animation: glo 1s ease-in-out infinite alternate;
       }
     @-webkit-keyframes glo {
         from {
@@ -79,7 +79,7 @@
         }}
         
         .hoo {
-        animation: hoo  ease-in-out infinite alternate;
+        animation: hoo 1s ease-in-out infinite alternate;
          box-shadow: 0px 0px  180px #e4129b;
          border-radius:49px;
       }
@@ -94,7 +94,7 @@
          
         }}
         .hrr {
-        animation: hrr  ease-in-out infinite alternate;
+        animation: hrr 1s ease-in-out infinite alternate;
          box-shadow: 0px 0px  180px #e4129b;
          border-radius:49px;
          background-color:transparent;
@@ -112,7 +112,7 @@
           box-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
         }}
         .ho {
-        animation: ho  ease-in-out infinite alternate;
+        animation: ho 1s ease-in-out infinite alternate;
          box-shadow: 0px 0px  180px #e4129b;
          border-radius:90px;
       }
