--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         font-size: 18px;
         color: #fff;
         text-align: center;
-        animation: geo  ease-in-out infinite alternate;
+        animation: geo 0s  ease-in-out infinite alternate;
       }
     @-webkit-keyframes geo {
         from {
@@ -67,7 +67,7 @@
         font-size: 39px;
         color: #fff;
         text-align: center;
-        animation: gaa  ease-in-out infinite alternate;
+        animation: gaa 0s ease-in-out infinite alternate;
       }
     @-webkit-keyframes gaa {
         from {
@@ -130,7 +130,7 @@
         font-size: 50px;
         color: #fff;
         text-align: center;
-        animation: ga  ease-in-out infinite alternate;
+        animation: ga 0s ease-in-out infinite alternate;
       }
     @-webkit-keyframes ga {
         from {
