--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width,initial-scale=1">
+         <link  rel="stylesheet" href="style.css">
         <style>
          td{
           border: 10px solid rgb(18, 18, 18);
@@ -141,7 +142,7 @@
           text-shadow: 0 0 20px #fff, 0 0 30px #0ce21a, 0 0 40px #0ce21a, 0 0 50px , 0 0 60px #0ce21a, 0 0 70px #0ce21a, 0 0 80px #0ce21a;
         }}
         </style>
-        <link  rel="stylesheet" href="style.css">
+       
    <center style="background-color:transparent 5 aliceblue ;background-position: center;"> <img class="hoo" src="logo.jpg" height="100">
 </center>
 <center><b><h1 class="glo">TUMHARI SAKHI</h1></b></center>
@@ -235,8 +236,8 @@ Don’t miss this chance to engage in an important conversation and empower your
   </k>
 </div></body><br><br><Br>
     <footer>
-  <center><table >
-</table><a href="https://forms.gle/6qs5QQVohEbfdLYd9"><button class="hrr" style="height: 100px;width: 400px;"><b style="font-size: medium;color: white;">Click to Register Webminar </b></button></a><br><Br><Br><br>
+  <center> 
+      <a href="https://forms.gle/6qs5QQVohEbfdLYd9"><button class="hrr" style="height: 100px;width: 400px;"><b style="font-size: medium;color: white;">Click to Register Webminar </b></button></a><br><Br><Br><br>
 </center>
     </footer>
 
