--- a/index.html
+++ b/index.html
@@ -223,8 +223,8 @@ Don’t miss this chance to engage in an important conversation and empower your
         <h1><b class="gaa">Meet Our Speaker</b></h1>
         <table> <div>
         <tr>
-      <th ><figure> <img  class="ho" src="2exp.jpg" height="150px"><figcaption><b class="glo" style="font-size: 30px;">Ishita Chatterjee</b></figcaption></figure></th>
-        <th><figure><img class="ho" src="1exp.jpg"height="150px"><figcaption><b class="glo" style="font-size: 30px;">Yashi Sonthalia</b></figcaption></figure></th>
+      <th ><figure><center> <img  class="ho" src="2exp.jpg" height="150px"></center><figcaption><b class="glo" style="font-size: 30px;">Ishita Chatterjee</b></figcaption></figure></th>
+        <th><figure><center><img class="ho" src="1exp.jpg"height="150px"></center><figcaption><b class="glo" style="font-size: 30px;">Yashi Sonthalia</b></figcaption></figure></th>
       </tr>
       <tr>
       <td class="ga" style="text-align: center;font-size: 20px;">Master's In Clinical Psychology <br> Specialised <br>In Stress Management,Anxiety,Trauma<br>And Grief Relationship Counselling
