--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         font-size: 19px;
         color: #fff;
         text-align: center;
-     animation: glow 1ms ease-in-out infinite alternate;
+     animation: glow 1s in-out infinite alternate;
       }
     @-webkit-keyframes glow {
         from {
@@ -40,7 +40,7 @@
         font-size: 39px;
         color: #fff;
         text-align: center;
-        animation: glo  1ms ease-in-out infinite alternate;
+        animation: glo  1s ease-in-out infinite alternate;
       }
     @-webkit-keyframes glo {
         from {
@@ -54,7 +54,7 @@
         font-size: 18px;
         color: #fff;
         text-align: center;
-        animation: geo 1ms  ease-in-out infinite alternate;
+        animation: geo 1s  ease-in-out infinite alternate;
       }
     @-webkit-keyframes geo {
         from {
@@ -68,7 +68,7 @@
         font-size: 39px;
         color: #fff;
         text-align: center;
-        animation: gaa 1ms ease-in-out infinite alternate;
+        animation: gaa 1s ease-in-out infinite alternate;
       }
     @-webkit-keyframes gaa {
         from {
@@ -80,7 +80,7 @@
         }}
         
         .hoo {
-        animation: hoo 1ms ease-in-out infinite alternate;
+        animation: hoo 1s ease-in-out infinite alternate;
          box-shadow: 0px 0px  180px #e4129b;
          border-radius:49px;
       }
@@ -95,7 +95,7 @@
          
         }}
         .hrr {
-        animation: hrr 1ms ease-in-out infinite alternate;
+        animation: hrr 1s ease-in-out infinite alternate;
          box-shadow: 0px 0px  180px #e4129b;
          border-radius:49px;
          background-color:transparent;
@@ -113,7 +113,7 @@
           box-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
         }}
         .ho {
-        animation: ho 1ms ease-in-out infinite alternate;
+        animation: ho 1s ease-in-out infinite alternate;
          box-shadow: 0px 0px  180px #e4129b;
          border-radius:90px;
       }
@@ -131,7 +131,7 @@
         font-size: 50px;
         color: #fff;
         text-align: center;
-        animation: ga 1ms ease-in-out infinite alternate;
+        animation: ga 1s ease-in-out infinite alternate;
       }
     @-webkit-keyframes ga {
         from {
