--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         font-size: 19px;
         color: #fff;
         text-align: center;
-     animation: glow 1s in-out infinite alternate;
+     animation: glow 1s in-out ;
       }
     @-webkit-keyframes glow {
         from {
