--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         font-size: 19px;
         color: #fff;
         text-align: center;
-     animation: glow 1s ease-in-out alternate;
+      animation:  1s ease-in-out infinite alternate;
       }
     @-webkit-keyframes glow {
         from {
