--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ text-shadow: 0 0 10px #fff,
 0 0 70px #0008e6;
 }
       </style><style>
-            .hoo {
+            .gaa {
 font-size: 39px;
 color: #fff;
 text-align: center;
