--- a/index.html
+++ b/index.html
@@ -33,20 +33,8 @@
                  0 0 60px #e60073, 
                  0 0 70px #e60073;
 }</style><style>
-        .glo {
-        font-size: 39px;
-        color: #fff;
-        text-align: center;
-        animation: glo 1s ease-in-out infinite alternate;
-      }
-    @-webkit-keyframes glo {
-        from {
-          text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
-        }
-        
-        to {
-          text-shadow: 0 0 20px #fff, 0 0 30px #ff4da6, 0 0 40px #ff4da6, 0 0 50px #ff4da6, 0 0 60px #ff4da6, 0 0 70px #ff4da6, 0 0 80px #ff4da6;
-        }}</style><style>
+        .glo { font-size: 39px; color: #fff; text-align: center; text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073; }
+</style><style>
           .geo {
 font-size: 18px;
 color: #fff;
