--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ Don’t miss this chance to engage in an important conversation and empower your
         <table> <div>
         <tr>
       <th ><figure class="d1"> <img  class="ho" src="2exp.jpg" height="150px"><figcaption><b class="glo" style="font-size: 30px;">Ishita Chatterjee</b></figcaption></figure></th>
-        <th><figure class="d2"><img class="ho" src="1exp.jpg"height="150px"><figcaption><b class="glo" style="font-size: 30px;">Yashi Sonthalia</b></figcaption></figure></th>
+        <th><figure class="d2"><a href="https://www.instagram.com/yashi_sonthalia?igsh=NHNrNHo0Y3JlNzVl"><img class="ho" src="1exp.jpg"height="150px"></a><figcaption><b class="glo" style="font-size: 30px;">Yashi Sonthalia</b></figcaption></figure></th>
       </tr>
       <tr>
       <td class="ga" style="text-align: center;font-size: 20px;">Master's In Clinical Psychology <br> Specialised <br>In Stress Management,Anxiety,Trauma<br>And Grief Relationship Counselling
