--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ Don’t miss this chance to engage in an important conversation and empower your
         <h1><b class="gaa">Meet Our Speaker</b></h1><br><br><br><br>
         <table> <div>
         <tr>
-      <th ><figure class="d1"> <img  class="ho" src="2exp.jpg" height="150px"><figcaption><b class="glo" style="font-size: 30px;">Ishita Chatterjee</b></figcaption></figure></th>
+      <th ><figure class="d1"> <a href="https://www.instagram.com/faithingrey?igsh=MXUybDlzeWNpbGgxYg=="> <img  class="ho" src="2exp.jpg" height="150px"></a><figcaption><b class="glo" style="font-size: 30px;">Ishita Chatterjee</b></figcaption></figure></th>
         <th><figure class="d2"><a href="https://www.instagram.com/yashi_sonthalia?igsh=NHNrNHo0Y3JlNzVl"><img class="ho" src="1exp.jpg"height="150px"></a><figcaption><b class="glo" style="font-size: 30px;">Yashi Sonthalia</b></figcaption></figure></th>
       </tr>
       <tr>
