--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@ border-radius: 90px;
 }
         </style>
         <link  rel="stylesheet" href="style.css">
-   <center style="background-color:transparent 5 aliceblue ;background-position: center;"> <img class="hoo" src="logo.jpg" height="100">
+   <center style="background-color:transparent 5 aliceblue ;background-position: center;"><a href="https://www.instagram.com/tumharii_sakhii?igsh=MXN6c3d6cDAwNGJ3dg=="> <img class="hoo" src="logo.jpg" height="100">
 </center>
-<center><b><h1 class="glo">TUMHARI SAKHI</h1></b></center>
+<center><b><h1 class="glo">TUMHARI SAKHI</h1></b></a></center>
    
     </head>
     
